Search is functional on mobile and desktop sites. Still need to fix styling.

--- a/assets/src/styles/components/_bookshelf.scss
+++ b/assets/src/styles/components/_bookshelf.scss
@@ -17,16 +17,16 @@
         border-radius: $border1em;
         margin: 10px;
         width: 225px;
-        height: 50vh;
+        height: 35vh;
      
         
         @include desktop {
         width: 225px;
-        height: 300px;
+        height: 325px;
         }
         @include tablet {
             width: 225px;
-            height: 50vh;
+            height: 35vh;
         }
         &__cover{
             display: block;
@@ -36,8 +36,8 @@
             margin: auto;
 
             @include desktop {
-                width: 115px;
-                height: 25vh;
+                width: 135px;
+                
             }
             
             
